# GVDS

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  gvds.conf.example  hvs.conf.example  install-env.sh  ubuntu-install.sh
src/: CMakeLists.txt  main.cc
src/aggregation/: AggregationServer.cc  AggregationServer.h  StorageResBicInfo.cc  StorageResBicInfo.h  StorageState.h
src/aggregationcmdline/: CMakeLists.txt  resourcedelete.cc  resourcedelete_ipc.cc  resourcequery.cc  resourcequery_ipc.cc  resourceregister.cc  resourceregister_ipc.cc  resourceupdate.cc
src/authcmdline/: CMakeLists.txt  adauthmodify.cc  adauthsearch.cc  authmodify_ipc.cc  authsearch_ipc.cc
src/client/: CMakeLists.txt  cache_mod.cc  cache_mod.h  client.cc  client.h  client_worker.cc  client_worker.h  fuse_mod.cc  fuse_mod.h  graph_mod.cc  graph_mod.h  gvds_fuse_impl.cc  hvs_fuse_impl.cc  ipc_mod.cc  ipc_mod.h  ipc_struct.h  main.cc  msg_mod.cc  msg_mod.h  queue.cc  queue.h  readahead.cc  readahead.h  rpc_mod.cc  rpc_mod.h  zone_mod.cc  zone_mod.h  zone_struct.h
src/client/OPTNode/: myping.cc  myping.h  opt_node.cc  opt_node.h
src/client/clientUser/: clientUser_struct.cc  clientUser_struct.h
src/client/clientuser/: ClientAuth_struct.cc  ClientAuth_struct.h  ClientUser.cc  ClientUser.h  ClientUser_struct.cc  ClientUser_struct.h
src/client/fuse/: fsutils_demo.hpp
src/cmdline/: CmdLineProxy.cc  CmdLineProxy.h
src/cmdline/aggregationcmdline/: CMakeLists.txt  resourcedelete.cc  resourcequery.cc  resourceregister.cc  resourceupdate.cc
src/cmdline/mconfcmdline/: CMakeLists.txt  deletecenter.cc  modifycenter.cc  searchcenter.cc
src/cmdline/spacecmdline/: CMakeLists.txt  spacerename_admin.cc  spacerename_ipc.cc  spacereplica.cc  spacesizechange_ipc.cc  spaceusage_admin.cc  spaceusage_ipc.cc
src/cmdline/usercmdline/: CMakeLists.txt  adcreateaccountmap.cc  adminsignup.cc  adsearchaccountmap.cc  adseepool.cc  aduaccountmap.cc  (+8 more)
src/common/: JsonSerializer.cc  JsonSerializer.h  LRU.h  Operation.h  RestServer.cc  RestServer.h  Thread.cc  Thread.h  buffer.h  centerinfo.h  context.cc  debug.h  hvsrest.cc  json.h  transaction.h
src/config/: ConfigureSettings.cc  ConfigureSettings.h  ConfigureWrapper.cc  ConfigureWrapper.h  SettingUtils.cc  SettingUtils.h  default_config.hpp
src/datastore/: .couchbase_helper.cc.swp  CMakeLists.txt  couchbase_helper.cc  couchbase_helper.h  datastore.cc  datastore.h
src/fuse/: CMakeLists.txt  fsutils_rpc.hpp  hvs_fuse.cc
src/include/: aggregation_struct.h  context.h  couchbase_helper.h  datastore.h  gvds_context.h  gvds_struct.h  hvs_struct.h  hvsdef.h  monitor_counter.hpp
src/io_proxy/: CMakeLists.txt  fd_mgr.cc  fd_mgr.h  grpc_impl.cc  grpc_impl.h  gvds_ioproxy_main.cc  hvs_ioproxy_main.cc  io_mon.cc  io_mon.h  io_proxy.cc  io_proxy.h  io_worker.cc  io_worker.h  proxy_op.cc  proxy_op.h  replica_mgr.cc  replica_mgr.h  rpc_bindings.hpp  rpc_types.h  sync_io.cc  sync_io.h
src/ipc/: IPCClient.h  IPCMessage.hpp  IPCServer.cc  IPCServer.hpp
src/log/: Entry.h  Log.cc  Log.h
src/manager/: CMakeLists.txt  ioproxy_mgr.cc  ioproxy_mgr.h  main.cc  manager.cc  manager.h  resaggregation_mgr.cc  resaggregation_mgr.h  rpc_mod.cc  rpc_mod.h
src/mconfcmdline/: CMakeLists.txt  deletecenter.cc  modifycenter.cc  searchcenter.cc
src/msg/: CUDPBlast.h  bind.h  bind_demo.h  client_session.cc  client_session.h  node.h  op.h  operator_client.hpp  pack.h  rpc.cc  rpc.h  server_session.cc  server_session.h  stat.h  stat_demo.h  udt_cc.h  udt_client.cc  udt_client.h  udt_server.cc  udt_server.h  udt_writer.cc  udt_writer.h  websocket.cc  websocket.h
src/space/: Space.cc  Space.h  SpaceServer.cc  SpaceServer.h
src/spacecmdline/: CMakeLists.txt  spacerename.cc  spacerename_admin.cc  spacerename_ipc.cc  spacesizechange.cc  spacesizechange_ipc.cc  spaceusage_admin.cc  spaceusage_ipc.cc
src/usercmdline/: CMakeLists.txt  adcreateaccountmap.cc  adminsignup.cc  adsearchaccountmap.cc  adseepool.cc  aduaccountmap.cc  listapply.cc  suggestion.cc  usercancel.cc  usercancel_ipc.cc  userexit.cc  userexit_ipc.cc  userlogin.cc  userlogin_ipc.cc  usermodify.cc  usermodify_ipc.cc  usersearch.cc  usersearch_ipc.cc  usersignup.cc  usersignup_ipc.cc
src/usermodel/: Account.cc  Account.h  MD5.cpp  MD5.h  UserModelClient.cc  UserModelServer.cc  UserModelServer.h
src/zone/: Zone.cc  Zone.h  ZoneServer.cc  ZoneServer.h
src/zonecmdline/: CMakeLists.txt  mapadd.cc  mapadd_ipc.cc  mapdeduct.cc  mapdeduct_admin.cc  mapdeduct_ipc.cc  zoneadd.cc  zoneadd_admin.cc  zoneadd_ipc.cc  zonecancel.cc  zonecancel_admin.cc  zonecancel_ipc.cc  zonelist_admin.cc  zonelist_ipc.cc  zoneregister.cc  zoneregister_ipc.cc  zonerename.cc  zonerename_admin.cc  zonerename_ipc.cc  zoneshare.cc  zoneshare_admin.cc  zoneshare_ipc.cc  zonesharecancel.cc  zonesharecancel_admin.cc  zonesharecancel_ipc.cc
tests/: CMakeLists.txt
tests/account/: CMakeLists.txt  test_login_cancel.cc  test_login_exit.cc  test_login_modify.cc  test_login_search.cc  test_mconf_add_update.cc  test_mconf_search.cc  test_registration.cc
tests/aggregate/: CMakeLists.txt  test_aggregate.cc
tests/auth/: CMakeLists.txt  auth_addmodel.cc  auth_modify.cc  auth_search.cc  centerinfo_conf.cc
tests/common/: CMakeLists.txt  test_account.cc  test_cmdline.cc  test_config.cc  test_ipc.cc  test_json.cc  test_log.cc  test_lru.cc  test_rest.cc
tests/common_test_shell/: merge_2_some.sh  merge_2_some_r.sh  merge_some.sh  readme.md  resultformat.xlsx  testall_some.sh
tests/data/: example.cfg.in  syncio.txt
tests/datastore/: CMakeLists.txt  test_couchbase.cc  test_datastore.cc
tests/ioproxy/: CMakeLists.txt  test_ioproxy.cc  test_ioproxy_rpc.cc  test_syncio.cc
tests/manager/: CMakeLists.txt  test_ioproxy_mgr.cc  test_manager.cc  test_resaggr_mgr.cc  test_resaggregation_mgr.cc
tests/msg/: CMakeLists.txt  test_pack.cc  test_rpc.cc  test_udt.cc
tests/space/: CMakeLists.txt  initdir.sh  test_space.cc  test_space_func.cc  test_space_size.cc  tests_space.cc  tests_space_test_space.cc
tests/zone/: CMakeLists.txt  test_zone.cc
(+54 files in other folders)
